IDE optimization.